# Basic_control_utils

./: CMakeLists.txt  LTISystem.hpp  README.md  cppTypes.hpp  linearizer.hpp  orientation.hpp  orientation.inl  pseudoInverse.hpp
Filter/: kalmanFilter.hpp
LQR/: finiteDisLqr.hpp  infiniteContinousLqr.hpp  infiniteDiscreteLqr.hpp
LQR/riccati/: CARE.hpp  DARE.hpp
examples/: kalmanTest.cpp  linearizerTest.cpp  lqrTest.cpp  oriTest.cpp  pseudoinverseTest.cpp
